fixed scrollbar background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,7 +411,7 @@ header nav li:hover:before, nav li:hover:after{
   width: 5px;
 }
 ::-webkit-scrollbar-track{
-  box-shadow: inset 0 0 5px grey;
+  box-shadow: inset 0 0 5px #fff;
 }
 ::-webkit-scrollbar-thumb{
   background: #c2c2c2;
